RESOLVED FIXED301880
[css-anchor-position-1] fixed-positioned boxes with position-area should not use scrollable area as containing block
https://bugs.webkit.org/show_bug.cgi?id=301880
Summary [css-anchor-position-1] fixed-positioned boxes with position-area should not ...
fantasai
Reported 2025-11-03 12:07:31 PST
The fix for bug 299950 failed to exclude fixed-positioned boxes from the expanded containing block geometry, resulting in incorrect layout of fixed anchor-positioned boxes that reference the size or edges of the viewport and incorrect fallback behavior for anchored boxes that use position-try.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-03 12:08:07 PST
fantasai
Comment 2 2025-11-03 12:12:19 PST
EWS
Comment 3 2025-11-04 07:02:38 PST
Committed 302537@main (a742f82ced72): <https://commits.webkit.org/302537@main> Reviewed commits have been landed. Closing PR #53326 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.